# ARGUS-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  benchmark_results.json  docker-compose.yml  pyproject.toml
agent/: graph.py  models.py  state.py  streaming.py  tools.py
agent/mitre/: mapper.py
agent/nodes/: aggregator.py  cve_agent.py  graph_agent.py  history_agent.py  hitl.py  mitre_tagger.py  reachability_agent.py  supervisor.py  utils.py  visual_intel_agent.py
api/: main.py
benchmark/: braintrust_upload.py  runner.py
benchmark/alerts/adversarial/: alerts.json
benchmark/alerts/real/: alerts.json
benchmark/alerts/synthetic/: alerts.json
benchmark/ground_truth/: expected.json
benchmark/scorers/: hallucination.py  injection_resistance.py  task_completion.py  tool_accuracy.py
data/seed/: attack_graph.cypher
frontend/: app.py
mcp_servers/graph/: models.py  server.py
mcp_servers/history/: server.py
mcp_servers/nvd/: models.py  server.py
mcp_servers/visual_intel/: models.py  server.py
scripts/: health_check.py  seed_graph.py  seed_history.py
tests/phase1/: test_nvd_server.py
tests/phase2/: test_agent.py  test_api.py
tests/phase3/: test_aggregator.py  test_confidence.py  test_mitre_mapper.py
tests/phase4/: test_scorers.py
tests/phase5/: test_visual_intel.py
