[project]
name = "argus-agent"
version = "0.1.0"
description = "Autonomous Security Investigation Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.6",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.5",
    "langsmith>=0.8.15",
    "mcp>=1.27.2",
    "neo4j>=6.2.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "uvicorn>=0.48.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]


[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]
